--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ num-bigint = "0.4.2"
 [dependencies.multiversx-sc]
 version = "0.54.4"
 
+[dependencies.tfn-dao]
+path = "../tfn-dao-rs"
+
 [dependencies.tfn-franchise-dao]
 path = "../tfn-franchise-dao-rs"
 
