--- a/output/tfn-launchpad.abi.json
+++ b/output/tfn-launchpad.abi.json
@@ -411,6 +411,21 @@
             ]
         },
         {
+            "name": "getDeployedLaunchpads",
+            "mutability": "readonly",
+            "inputs": [
+                {
+                    "name": "address",
+                    "type": "Address"
+                }
+            ],
+            "outputs": [
+                {
+                    "type": "u64"
+                }
+            ]
+        },
+        {
             "name": "getWhitelistedUsers",
             "mutability": "readonly",
             "inputs": [
