fixed create pair gas limit

--- a/output/tfn-launchpad.abi.json
+++ b/output/tfn-launchpad.abi.json
@@ -170,6 +170,9 @@
         {
             "name": "deployFranchise",
             "mutability": "mutable",
+            "payableInTokens": [
+                "EGLD"
+            ],
             "inputs": [
                 {
                     "name": "id",
