implemented digital identity functionality

--- a/output/tfn-launchpad.abi.json
+++ b/output/tfn-launchpad.abi.json
@@ -42,8 +42,8 @@
                     "type": "Address"
                 },
                 {
-                    "name": "details",
-                    "type": "SubscriberDetails"
+                    "name": "identity_id",
+                    "type": "u64"
                 },
                 {
                     "name": "kyc_enforced",
@@ -210,6 +210,27 @@
             "name": "setMainDAO",
             "mutability": "mutable",
             "inputs": [],
+            "outputs": []
+        },
+        {
+            "name": "getDigitalIdentityAddress",
+            "mutability": "readonly",
+            "inputs": [],
+            "outputs": [
+                {
+                    "type": "Address"
+                }
+            ]
+        },
+        {
+            "name": "setDigitalIdentity",
+            "mutability": "mutable",
+            "inputs": [
+                {
+                    "name": "address",
+                    "type": "Address"
+                }
+            ],
             "outputs": []
         },
         {
@@ -489,8 +510,8 @@
                     "type": "Address"
                 },
                 {
-                    "name": "details",
-                    "type": "SubscriberDetails"
+                    "name": "identity_id",
+                    "type": "u64"
                 },
                 {
                     "name": "kyc_enforced",
@@ -594,43 +615,6 @@
                 {
                     "name": "Deployed",
                     "discriminant": 3
-                }
-            ]
-        },
-        "SubscriberDetails": {
-            "type": "struct",
-            "fields": [
-                {
-                    "name": "name",
-                    "type": "bytes"
-                },
-                {
-                    "name": "description",
-                    "type": "bytes"
-                },
-                {
-                    "name": "logo",
-                    "type": "bytes"
-                },
-                {
-                    "name": "card",
-                    "type": "bytes"
-                },
-                {
-                    "name": "website",
-                    "type": "bytes"
-                },
-                {
-                    "name": "email",
-                    "type": "bytes"
-                },
-                {
-                    "name": "twitter",
-                    "type": "bytes"
-                },
-                {
-                    "name": "telegram",
-                    "type": "bytes"
                 }
             ]
         }
