added link requests to digital identity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ path = "../tfn-franchise-dao-rs"
 
 [dependencies.tfn-platform]
 path = "../tfn-platform-rs"
+
+[dependencies.tfn-digital-identity]
+path = "../tfn-digital-identity-rs"
